# lwr-robot-description

./: CMakeLists.txt  README.md  lwr-robot.urdf
meshes/: arm_base.dae  arm_flanche.dae  arm_segment_a.dae  arm_segment_b.dae  arm_segment_last.dae  arm_wrist.dae
